--- a/services/cabinet/public/html/templates/three-view.html
+++ b/services/cabinet/public/html/templates/three-view.html
@@ -1,19 +1,19 @@
 <div class='three-view-cnt' id='{{id()}}'>
   <div class='three-view-three-d-cnt'></div>
   <div class='three-view-two-d-cnt'>
-    <div class='three-view-canvases-cnt inline-flex'>
+    <div class='three-view-canvases-cnt inline-flex' id='{{id()}}-cnt'>
       <div class='center-vert'>Part Code: <b id='three-view-part-code-{{id()}}'></b></div>
       <span class='three-view-canvas-cnt'>
         <b>Top</b>
-        <canvas id="three-view-top" width="300" height="300"></canvas>
+        <canvas id="three-view-top" width="{{maxDem()}}" height="{{maxDem()}}"></canvas>
       </span>
       <span class='three-view-canvas-cnt'>
         <b>Left</b>
-        <canvas id="three-view-left" width="300" height="300"></canvas>
+        <canvas id="three-view-left" width="{{maxDem()}}" height="{{maxDem()}}"></canvas>
       </span>
       <span class='three-view-canvas-cnt'>
         <b>Front</b>
-        <canvas id="three-view-front" width="300" height="300"></canvas>
+        <canvas id="three-view-front" width="{{maxDem()}}" height="{{maxDem()}}"></canvas>
       </span>
     </div>
   </div>
