two d layout and builder wroking together effectivly

--- a/services/cabinet/public/html/templates/2d/pop-up/door-2d.html
+++ b/services/cabinet/public/html/templates/2d/pop-up/door-2d.html
@@ -15,9 +15,9 @@
     </tr>
     <tr>
       <td>
-        <button class='hinge-btn'>Hinge</button>
+        <button class='hinge-btn transparent'>Hinge</button>
       </td>
-      <td><button class='remove-btn-2d'>Remove</button></td>
+      <td><button class='remove-btn-2d transparent'>Remove</button></td>
     </tr>
   </table>
 </div>
