--- a/services/cabinet/public/html/templates/2d/pop-up/wall-2d.html
+++ b/services/cabinet/public/html/templates/2d/pop-up/wall-2d.html
@@ -1,8 +1,8 @@
 <div type-2d='{{target.constructor.name}}' id='{{target.id()}}'
         x='{{lastImagePoint.x}}' y='{{lastImagePoint.y}}'>
-  <button class='add-door-btn-2d'>Add Door</button>
-  <button class='add-window-btn-2d'>Add Window</button>
-  <button class='add-vertex-btn-2d'>Add Vertex</button>
-  <button class='add-object-btn-2d'>Add Object</button>
-  <button class='remove-btn-2d'>Remove</button>
+  <button class='add-door-btn-2d transparent'>Add Door</button>
+  <button class='add-window-btn-2d transparent'>Add Window</button>
+  <button class='add-vertex-btn-2d transparent'>Add Vertex</button>
+  <button class='add-object-btn-2d transparent'>Add Object</button>
+  <button class='remove-btn-2d transparent'>Remove</button>
 </div>
