--- a/services/cabinet/public/html/templates/cabinet/head.html
+++ b/services/cabinet/public/html/templates/cabinet/head.html
@@ -1,4 +1,4 @@
-<div class='cabinet-header'>
+<div class='cabinet-header' cabinet-id='{{cabinet.uniqueId()}}'>
   {{$index}})
   <input class='cabinet-id-input' prop-update='{{$index}}.name'
         index='{{$index}}' display-id='{{displayId}}' value='{{cabinet.name()}}'>
