--- a/public/styles/expandable-list.css
+++ b/public/styles/expandable-list.css
@@ -116,3 +116,13 @@
   color: red;
   background-color: pink;
 }
+
+.drag-drop-popup-cnt {
+  background-color: white;
+  width: fit-content;
+  height: fit-content;
+  padding: 5pt;
+  border: 1px solid;
+  border-radius: 5pt;
+  box-shadow: 3px 3px 6px black, 3px 3px 6px grey, 3px 3px 6px lightgrey;
+}
