--- a/services/cabinet/public/html/templates/2d/pop-up/snap-2d.html
+++ b/services/cabinet/public/html/templates/2d/pop-up/snap-2d.html
@@ -1,17 +1,23 @@
-<div type-2d='{{target.constructor.name}}' id='{{target.id()}}'
+<div type-2d='{{target.parent().constructor.name}}'
+        id='{{target.parent().id()}}'
         x='{{lastImagePoint.x}}' y='{{lastImagePoint.y}}'>
-  <label>Depth</label>
-  <input class='value-2d' type="text" key="height" value="{{display(target.object().height())}}">
-  <br>
+  <label>Name</label>
+  <input class='value-2d' member='object' type="text" key="name" value="{{target.parent().name()}}">
+  <br><br>
   <label>Width</label>
-  <input class='value-2d' type="text" key="width" value="{{display(target.object().width())}}">
+  <input class='value-2d' memeber='cabinet' type="text" key="width" value="{{display(target.object().width())}}">
+  <br>
+  <label>Depth</label>
+  <input class='value-2d' memeber='cabinet' type="text" key="thickness" value="{{display(target.object().height())}}">
   <br>
   <label>Angle</label>
-  <input class='value-2d' type="text" convert='false' key="angle" value="{{target.object().angle()}}">
+  <input class='value-2d' memeber='snap' type="text" convert='false' key="angle" value="{{target.object().angle()}}">
   <br>
   <label>X</label>
-  <input class='value-2d' type="text" key="x" value="{{display(target.object().x())}}">
+  <input class='value-2d' memeber='snap' type="text" key="x" value="{{display(target.object().x())}}">
   <br>
   <label>Y</label>
-  <input class='value-2d' type="text" key="y" value="{{display(target.object().y())}}">
+  <input class='value-2d' memeber='snap' type="text" key="y" value="{{display(target.object().y())}}">
+  <br>
+  <button class='remove-btn-2d transparent'>Remove</button>
 </div>
