--- a/services/cabinet/public/html/templates/2d/pop-up/vertex-2d.html
+++ b/services/cabinet/public/html/templates/2d/pop-up/vertex-2d.html
@@ -10,7 +10,7 @@
       <td><input class='value-2d' key='y' value='{{display(target.y())}}'></td>
     </tr>
     <tr>
-      <td colspan="2"><button class='remove-btn-2d'>Remove</button></td>
+      <td colspan="2"><button class='remove-btn-2d transparent'>Remove</button></td>
     </tr>
     <tr>
   </table>
