two d layout working, need to refactor in order to acomidate more complex polygons

--- a/services/cabinet/public/html/templates/managers/template/subassemblies/body.html
+++ b/services/cabinet/public/html/templates/managers/template/subassemblies/body.html
@@ -6,12 +6,14 @@
     {{demensionXyzSelect.html()}}
     <input class='template-input' attr='subassemblies' name='demensions' value='{{getEqn(demensionXyzSelect, obj.demensions)}}'>
     <input disabled class='measurement-input' name='value'>
+    <input type="checkbox" name="convert" checked>
   </div>
   <br>
   <div class='sub-center-cnt inline-flex'>
     {{centerXyzSelect.html()}}
     <input class='template-input' attr='subassemblies' name='center' value='{{getEqn(centerXyzSelect, obj.center)}}'>
     <input disabled class='measurement-input' name='value'>
+    <input type="checkbox" name="convert" checked>
   </div>
   <br>
   <div class='sub-center-cnt inline-flex'>
