--- a/services/cabinet/public/html/templates/managers/template/values/head.html
+++ b/services/cabinet/public/html/templates/managers/template/values/head.html
@@ -1,6 +1,7 @@
 <div template-attr='values'>
   <input class='template-input' attr='values' type='text' name='name' value='{{obj.key}}' placeholder="Variable Name">
   <input class='measurement-input' type='text' name='value' value='{{obj.eqn}}' placeholder="Value" disabled>
+  <input type="checkbox" name="convert" checked>
   <br>
   <input class='template-input full-width' attr='values' type='text' name='eqn' value='{{obj.eqn}}' placeholder="Equation">
 </div>
