Application is working tying to figure out what to do aabout 3-d rotations....

--- a/services/cabinet/public/html/templates/group/body.html
+++ b/services/cabinet/public/html/templates/group/body.html
@@ -4,11 +4,11 @@
     <h2>Inset <b class='group-key'>{{group.propertyConfig('Inset').__KEY}}</b></h2>
   </div>
   <div class='group-header' cab-style='Overlay'
-      {{!group.propertyConfig.isInset() && !group.propertyConfig.isRevealOverlay() ? '' : 'hidden'}}>
+      {{!group.propertyConfig.isInset() && !group.propertyConfig.isReveal() ? '' : 'hidden'}}>
     <h2>Overlay <b class='group-key'>{{group.propertyConfig('Overlay').__KEY}}</b></h2>
   </div>
   <div class='group-header' cab-style='Reveal'
-      {{group.propertyConfig.isRevealOverlay() ? '' : 'hidden'}}>
+      {{group.propertyConfig.isReveal() ? '' : 'hidden'}}>
     <h2>Reveal <b class='group-key'>{{group.propertyConfig('Reveal').__KEY}}</b></h2>
   </div>
   {{propertyHtml()}}
