Major rewrite happening to the cabinet division classes, cautionary save before wrecking house

--- a/services/cabinet/public/html/templates/managers/template/body.html
+++ b/services/cabinet/public/html/templates/managers/template/body.html
@@ -35,7 +35,7 @@
     </div>
   </div>
   <div template-id='{{template.id()}}' class='cabinet-template-input-cnt'>
-    <div class='expand-header'>Opening Border Part Codes</div>
+    <div class='expand-header'>Openings</div>
     <div hidden class="{{containerClasses.openings}}">5</div>
   </div>
   <div template-id='{{template.id()}}' class='cabinet-template-input-cnt'>
