--- a/services/cabinet/public/html/templates/managers/template/openings/head.html
+++ b/services/cabinet/public/html/templates/managers/template/openings/head.html
@@ -1,4 +1,9 @@
-<div class='inline-flex'>
-  {{select.html()}}
-  <input class='opening-part-code-input' attr='openings' name='partCode' value="{{obj[select.value()]}}">
+<div class='inline-flex' opening-id='{{obj.id}}'>
+  Openings
+  <label>Part Codes</label>
+  <input class='opening-type-selector' type="radio" name="borderType-{{obj.id}}" value="part-code"
+      {{obj._Type !== 'location' ? 'checked' : ''}}>
+  <label>Locations</label>
+  <input class='opening-type-selector' type="radio" name="borderType-{{obj.id}}" value="location"
+      {{obj._Type === 'location' ? 'checked' : ''}}>
 </div>
