--- a/services/cabinet/public/html/templates/opening.html
+++ b/services/cabinet/public/html/templates/opening.html
@@ -1,4 +1,4 @@
-<div class='opening-cnt' opening-id='{{opening.uniqueId()}}'>
+<div class='opening-cnt' opening-id='{{opening.id()}}'>
   <div class='divider-controls'>
   </div>
 </div>
