division algorythm is now working in 3 mf D

--- a/services/cabinet/public/html/templates/managers/template/body.html
+++ b/services/cabinet/public/html/templates/managers/template/body.html
@@ -6,6 +6,7 @@
       <button class='paste-template right'>Paste</button>
     </div>
   </div>
+  <div></div>
   <span class='part-input-cnt'>
     <br>
     <input type="text" name="partSelector" list='part-list'>
