--- a/services/cabinet/public/html/templates/managers/template/body.html
+++ b/services/cabinet/public/html/templates/managers/template/body.html
@@ -7,11 +7,8 @@
     </div>
   </div>
   <div></div>
-  <span class='part-input-cnt'>
-    <br>
-    <input type="text" name="partSelector" list='part-list'>
-    <datalist id='part-list'></datalist>
-  </span>
+  <div></div>
+
   <input class='cabinet-input dem' type="text" name="width" value="{{toDisplay(template.width())}}">
   X
   <input class='cabinet-input dem' type="text" name="height" value="{{toDisplay(template.height())}}">
