single page is created functions almost the same as the main server page

--- a/public/html/templates/input/decision/decision.html
+++ b/public/html/templates/input/decision/decision.html
@@ -1,6 +1,6 @@
 
 <span class='decision-input-cnt' node-id='{{_nodeId}}' {{reachable() ? '' : 'hidden'}}>
-  <span id='{{id}}' class='inline-flex'>
+  <span id='{{id}}'>
     <span:t repeat='input in inputArray' class='pad {{class}}' index='{{$index}}'>
       {{input.html()}}
     </span:t>
