--- a/public/html/templates/input/input.html
+++ b/public/html/templates/input/input.html
@@ -1,4 +1,4 @@
-<{{inline ? 'span' : 'div'}} class='input-cnt'{{hidden() ? ' hidden' : ''}}>
+<{{inline() ? 'span' : 'div'}} class='input-cnt'{{hidden() ? ' hidden' : ''}}>
   <label>{{label()}}</label>
   <input class='{{class()}}' list='input-list-{{id()}}' id='{{id()}}'
       placeholder='{{placeholder()}}' type='{{type()}}' name='{{name()}}'
@@ -7,4 +7,4 @@
     <option:t value="{{item}}" repeat='item in list()'></option:t>
   </datalist>
   <div class='error' id='{{errorMsgId()}}' hidden>{{errorMsg()}}</div>
-</{{inline ? 'span' : 'div'}}>
+</{{inline() ? 'span' : 'div'}}>
