--- a/public/html/templates/input/select.html
+++ b/public/html/templates/input/select.html
@@ -1,4 +1,4 @@
-<{{inline ? 'span' : 'div'}}  class='input-cnt'{{hidden() ? ' hidden' : ''}}>
+<{{inline() ? 'span' : 'div'}}  class='input-cnt'{{hidden() ? ' hidden' : ''}}>
   <label>{{label()}}</label>
   <select class='{{class()}}' id='{{id()}}' name='{{name()}}' value='{{value()}}'>
     <option:t repeat='key, value in list()' value='{{isArray() ? value : key}}'
@@ -7,4 +7,4 @@
     </option:t>
   </select>
   <div class='error' id='{{errorMsgId()}}' hidden>{{errorMsg()}}</div>
-  </{{inline ? 'span' : 'div'}}>
+  </{{inline() ? 'span' : 'div'}}>
