--- a/services/cabinet/public/html/templates/model-controller.html
+++ b/services/cabinet/public/html/templates/model-controller.html
@@ -1,33 +1,32 @@
-<div>
-  <div class='model-selector'>
-    <div {{group.level === -1 ? 'hidden' : ''}}>
-      <div class='{{tdm.isTarget("prefix", group.prefix) ? "active " : ""}}
-                  {{label ? "prefix-switch model-label" : ""}}'
-            {{!label ? 'hidden' : ''}}>
-        <label type='prefix'>{{label}}</label>
-        <input type='checkbox' class='prefix-checkbox' prefix='{{group.prefix}}'
-            {{!tdm.hidePrefix(label) ? 'checked' : ''}}>
-      </div>
-      <div class='{{label ? "prefix-body indent" : ""}}'
-            {{label ? 'hidden' : ''}}>
-        <div:t class='model-label{{tdm.isTarget("part-name", partName) ? " active" : ""}}'
-                repeat='partName, partList in group.parts'>
-          <label type='part-name'>{{partName}}</label>
-          <input type='checkbox' class='part-name-checkbox' part-name='{{partName}}'
-              {{!tdm.hidePartName(partName) ? 'checked' : ''}}>
+<div class='{{group.level < 2 ? '' : 'model-selector indent'}}'>
+    <div class='model-state {{tdm.isTarget("prefix", group.prefix) ? "active " : ""}}
+              {{label ? "prefix-switch" : ""}}'>
+    <label type='prefix'>{{label}}</label>
+    <input type='checkbox' class='prefix-checkbox' prefix='{{group.prefix}}'
+        {{!tdm.hidePrefix(label) ? 'checked' : ''}}
+        {{group.level === 0 ? 'hidden' : ''}}>
+    <div class='model-container'>
+      <div:t class='model-state {{group.level < 1 ? '' : 'model-label indent'}}
+                    {{tdm.isTarget("part-name", partName) ? " active" : ""}}'
+              repeat='partName, partList in group.parts'>
+        <label type='part-name' part-name='{{partName}}'>
+            {{partName}}{{partList.length === 1 ? '(' + partList[0].partCode() + ')' : ''}}
+        </label>
+        <input type='checkbox' class='part-name-checkbox' part-name='{{partName}}'
+            {{!tdm.hidePartName(partName) ? 'checked' : ''}}>
+        <div class='indent'>
           <div:t part-id='{{part.id()}}' part-code='{{part.partCode()}}'
-                  class='{{tdm.isTarget("part-id", part.id()) ? "active " : ""}}
-                        model-label indent'
+                  class='model-state {{tdm.isTarget("part-id", part.id()) ? "active " : ""}}'
                   repeat='part in partList'
-                  {{partList.length > 1 ? "" : "hidden"}}>
+                  {{partList.length === 1 ? 'hidden' : ''}}>
             <label type='part-id' part-id='{{part.id()}}' part-code='{{part.partCode()}}'>
               {{part.partCode()}}-{{$index + 1}}
             </label>
             <input type='checkbox' class='part-id-checkbox' part-id='{{part.id()}}' part-code='{{part.partCode()}}'
                 {{!tdm.hidePartId(part.id()) ? 'checked' : ''}}>
           </div:t>
-        </div:t>
-      </div>
+        </div>
+      </div:t>
     </div>
     <div:t repeat='label, group in group.groups' $t-id='model-controller'></div:t>
   </div>
