oreintation controls of 3d image added, need to refactor 3d javascript

--- a/public/html/templates/expandable/pill.html
+++ b/public/html/templates/expandable/pill.html
@@ -18,5 +18,5 @@
     <br>
     <div class='error' id='{{ERROR_CNT_ID()}}'></div>
   </div>
-  <div class="expand-body {{type()}}"></div>
+  <div class="expand-body {{type()}}" ex-list-id='{{id()}}' key='{{key}}'></div>
 </div>
