--- a/public/html/templates/input/decision/decisionTree.html
+++ b/public/html/templates/input/decision/decisionTree.html
@@ -1,6 +1,6 @@
 <div class='{{DecisionInputTree.class}}' root-id='{{wrapper.nodeId()}}'>
   {{inputHtml}}
-  <button class='{{DecisionInputTree.buttonClass}}' root-id='{{wrapper.nodeId()}}''
+  <button class='{{DecisionInputTree.buttonClass}}' root-id='{{wrapper.nodeId()}}'
         {{tree.hideButton ? 'hidden' : ''}}>
     {{tree.buttonText()}}
   </button>
