--- a/services/cabinet/public/html/templates/cabinet/head.html
+++ b/services/cabinet/public/html/templates/cabinet/head.html
@@ -5,13 +5,13 @@
   Size:
   <div class='cabinet-dem-cnt' cabinet-id='{{cabinet.id()}}'>
     <label>W:</label>
-    <input class='cabinet-input dem' prop-update='{{$index}}.width' name='width'
+    <input class='cabinet-id-input dem' prop-update='{{$index}}.width' name='width'
         display-id='{{displayId}}' value='{{displayValue(cabinet.width())}}'>
     <label>H:</label>
-    <input class='cabinet-input dem' prop-update='{{$index}}.length' name='length'
+    <input class='cabinet-id-input dem' prop-update='{{$index}}.length' name='length'
         display-id='{{displayId}}' value='{{displayValue(cabinet.length())}}'>
     <label>D:</label>
-    <input class='cabinet-input dem' prop-update='{{$index}}.thickness' name='thickness'
+    <input class='cabinet-id-input dem' prop-update='{{$index}}.thickness' name='thickness'
         display-id='{{displayId}}' value='{{displayValue(cabinet.thickness())}}'>
   </div>
 </div>
