--- a/services/cabinet/public/html/templates/cabinet/body.html
+++ b/services/cabinet/public/html/templates/cabinet/body.html
@@ -18,7 +18,7 @@
   <div class='center'>
     <button class='save-cabinet-btn' index='{{$index}}'>Save</button>
   </div>
-  <div:t repeat='opening in cabinet.openings' class='divison-section-cnt'>
+  <div:t repeat='opening in cabinet.openings' class='divison-section-cnt' index='{{$index}}'>
     {{OpenSectionDisplay.html(opening.sectionProperties())}}
   </div:t>
 </div>
