fixed polgon.merge function.... messed something else up

--- a/services/cabinet/public/html/templates/index.html
+++ b/services/cabinet/public/html/templates/index.html
@@ -25,8 +25,10 @@
           <div id='model-display-cnt'>
             <canvas id="two-d-model"></canvas>
             <div id="three-d-model" class="viewer small">
-              <span id="model-controller"></span>
-              <span id="three-d-model-display"></span>
+              <div class='inline left'>
+                <div id='three-d-orientation-controls'></div>
+                <span id="model-controller"></span>
+              </div>
             </div>
           </div>
         </div>
