--- a/services/cabinet/public/html/templates/three-view.html
+++ b/services/cabinet/public/html/templates/three-view.html
@@ -1,5 +1,10 @@
 <div class='three-view-cnt' id='{{id()}}'>
-  <div class='three-view-three-d-cnt'></div>
+  <div class='three-view-three-d-cnt'>
+    <div class='inline left'>
+      <div class='orientation-controls' id='three-d-orientation-controls'></div>
+      <span id="model-controller"></span>
+    </div>
+  </div>
   <div class='three-view-two-d-cnt'>
     <div class='three-view-canvases-cnt inline-flex' id='{{id()}}-cnt'>
       <div class='part-input-cnt center-vert'>
