three-view-drawings are working properly and added cabnet silloettes which need to be more efficient

--- a/services/cabinet/public/html/templates/three-view.html
+++ b/services/cabinet/public/html/templates/three-view.html
@@ -13,16 +13,8 @@
       </div>
       <div class='center-vert'>Part Code: <b id='three-view-part-code-{{id()}}'></b></div>
       <span class='three-view-canvas-cnt'>
-        <b>Top</b>
-        <canvas id="three-view-top" width="{{maxDem()}}" height="{{maxDem()}}"></canvas>
-      </span>
-      <span class='three-view-canvas-cnt'>
-        <b>Left</b>
-        <canvas id="three-view-left" width="{{maxDem()}}" height="{{maxDem()}}"></canvas>
-      </span>
-      <span class='three-view-canvas-cnt'>
-        <b>Front</b>
-        <canvas id="three-view-front" width="{{maxDem()}}" height="{{maxDem()}}"></canvas>
+        <b>Three View Drawing</b>
+        <canvas id="three-view" width="{{maxDem()}}" height="{{maxDem()}}"></canvas>
       </span>
     </div>
   </div>
