--- a/services/cabinet/public/html/templates/managers/template/main.html
+++ b/services/cabinet/public/html/templates/managers/template/main.html
@@ -38,5 +38,5 @@
     <input type="checkbox" name="testDividers">
   </div>
   <div id='{{parentId()}}'></div>
-  <div class='center center-vert' id='layout-sketch-cnt'></div>
+  <div class='center center-vert' id='opening-sketch-cnt'></div>
 </div>
