I messed up my 3d to 2d algorithum.... no Idea where the issue/issues are

--- a/services/cabinet/public/html/templates/managers/template/body.html
+++ b/services/cabinet/public/html/templates/managers/template/body.html
@@ -9,6 +9,7 @@
   <div></div>
   <div></div>
 
+  <label>Demensions: </label>
   <input class='cabinet-input dem' type="text" name="width" value="{{toDisplay(template.width())}}">
   X
   <input class='cabinet-input dem' type="text" name="height" value="{{toDisplay(template.height())}}">
