two-d llayout functions pretty well

--- a/services/cabinet/public/html/templates/order/builder/body.html
+++ b/services/cabinet/public/html/templates/order/builder/body.html
@@ -1,4 +1,4 @@
-<div>
+<div order-id='{{order.id()}}'>
   <b>{{order.name}}</b>
   <button class='save-order-btn' index='{{$index}}'>Save</button>
   <div id='room-pills'>RoomPills!</div>
